<resources>
    <string name="app_name">Flypostr</string>

    <string name="title_poi_list">List</string>
    <string name="title_overview_map">Map</string>
    <string name="title_section3">About</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="action_refresh">Refresh</string>

    <string name="action_settings">Settings</string>
    <string name="txt_no_pois_available">No Flypostr available</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="saving">Saving...</string>
    <string name="saving_failed">Save failed</string>
    <string name="saving_done">Save done.</string>
    <string name="searching_">Searching...</string>
    <string name="delete_warning">In this version you can\'t delete your post</string>

    <string name="definition_flypostr1">
        Flyposter:
    </string>
    <string name="definition_flypostr2">
     With Flypostr messages can be left at any place, for example at a viewpoint, in a museum or at any other location. Other users who are in this place, can read messages and create comments.\n\n
        1. Discover the beauty of the region in which you find yourself.\n\n
        2. Swap you about your experiences and opinions of - enjoy the togetherness in the community Flypostr.\n\n
        3. Add new attractions added locally. Discover and reports about visited places, restaurants, cafes and attractions\n\n
        4. Receive the Flypostr community answers to your questions about the places.\n\n
        5. This app was created as part of the second Hackathon in Liechtenstein within 51 hours. Please let us know when error messages appear. We appreciate your feedback. (Info@hackathon.li)
    </string>
    <string name="about_text">
© itcc.li\n\n
IT Crowd Club Liechtenstein\n
Postfach 244 Vaduz\n
Liechtenstein\n
info@itcc.li\n

Teilnehmer 2016\n
Arthur Marxer,
Bernhard Wanger,
Carl Batliner,
Christian Schweig,
Marco Scheiber,
Philipp Gerber,
Sandro Pedrett,
Simon Meier,
Stefan Goldener,
Yves Ripoll,

Teilnehmer 2015,
Alexander Mulkidzhanyan,
Arthur Maxer,
Bolaji Smith,
Bruno Saboia de Albuquerque,
Charlotte Wehking,
Christoph Buehler,
Egon Lampert,
Erikas Sojunovas,
Guido Forster,
Kevin Flesher,
Lena Kaiser,
Livio Rinaldi,
Luca Tescari,
Patrik Marxer,
Peter Matt,
Philipp Gerber,
Simon Meier,
Thomas Elsensohn
    </string>
    <string name="my_location">My location</string>
    <string name="refreshing_">Refreshing...</string>
    <string name="done">Done</string>
    <string name="txt_select_picture">Select picture</string>
    <string name="txt_input_missing">Eingabe fehlt</string>
    <string name="txt_input_too_short">Eingabe zu kurz</string>
    <string name="txt_input_too_long">Eingabe zu lang</string>
    <string name="txt_location_missing">Speichern nicht möglich, Ihr Standort konnte noch nicht lokalisiert werden.</string>
    <string name="txt_your_location_gets_determined">Ihre Position wird ermittelt...</string>
    <string name="txt_lat_long_precision">{0} N, {1} O\nGenauigkeit: {2} m</string>
    <string name="txt_drag_me">Drag me</string>
    <string name="txt_drag_me_snippet">Define exact location\nby dragging</string>
    <string name="txt_satellite">Satellit</string>
    <string name="txt_my_location">Meine Position</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to sign up.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to sign up.</string>
    <string name="facebook_app_id">174114339679066</string>



    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to sign up.</string>
    <string name="twitter_consumer_key">9oKxR1JsUrM7AlsJa2Hl46L2s</string>
    <string name="twitter_consumer_secret">N4jIi7hW2FhV1WvGE7i4pXdEDmYYKXp5lVwJZDIBwsf4AOkRey</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to sign up.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to sign up.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="title_activity_login">Login</string>
    <string name="app_title">Flypostr</string>

    <string name="sign_out_message">You are signed out</string>

    <string name="sign_out">Signout</string>
    <string name="txt_map">Karte</string>
    <string name="txt_list">Liste</string>
    <string name="txt_add_comment">Kommentar Hinzufügen</string>
    <string name="txt_comment_too_short">Der Kommentar ist zu kurz.</string>


    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="logindescription">A login is necessary to create posters or comments</string>
    <string name="about">About</string>



</resources>