<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/icon"
        style="@style/ThemeOverlay.FirebaseIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/flypostr_logo" />


        <EditText
        android:id="@+id/field_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:textColorLink="?attr/colorPrimary" />


</LinearLayout>