<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scr_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="@string/txt_add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="2"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etx_comment"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="10"
                android:hint="@string/description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginRight="5dp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/delete_warning"
                android:layout_marginTop="10dp" />


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

</ScrollView>